@@ -1,3 +1,11 @@
+2007-09-10  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tkConsole.c:	Revise all Tcl_InitStubs() calls to restore
+	* generic/tkMain.c:	the traditional practice that a Tk shared
+	* generic/tkWindow.c:	library may [load] into a Tcl 8.5 interp at
+	any patchlevel.	 This practice also matches the compile time checks
+	of TCL_MAJOR_VERSION and TCL_MINOR_VERSION in tk.h.  [Bug 1723622]
+
 2007-09-06  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tkWindow.c (Initialize):	Moved common Tk initialization
